// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTournament should render national competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-ifAKCX iRArbx team-flags"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-ifAKCX iRArbx team-flags"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-ifAKCX kDCRj team-flags"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-ifAKCX kDCRj team-flags"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-ifAKCX cmRggy"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-ifAKCX cmRggy"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
